--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Tasya Lab Feedback</title>
+  <title>Tasya's Jira Lab</title>
 </head>
 <body>
-  <h1>Welcome to Tasya Lab Jira Feedback</h1>
-  <p>Please submit your feedback or bug report below:</p>
+  <h1>Welcome to Tasya's Jira Lab</h1>
+  <p>Streamlined Feedback for Stronger Security. Submit your feedback, incidents, or requests 👇</p>
 
-  <!-- Embed Jira Issue Collector -->
+  <!-- Report Bug -->
+  <button id="bug-report">🐞 Report a Bug</button>
+  <script type="text/javascript" src="https://tasya-lab.atlassian.net/s/d41d8cd98f00b204e9800998ecf8427e-T/vf1kch/b/9/c95134bc67d3a521bb3f4331beb9b804/_/download/batch/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector.js?locale=en-US&collectorId=13a2b0fd"></script>
+
+  <!-- Incident Report -->
+  <button id="incident-report">🚨 Incident Report</button>
+  <script type="text/javascript" src="https://tasya-lab.atlassian.net/s/d41d8cd98f00b204e9800998ecf8427e-T/vf1kch/b/9/c95134bc67d3a521bb3f4331beb9b804/_/download/batch/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector/com.atlassian.jira.collector.plugin.jira-issuecollector-plugin:issuecollector.js?locale=en-US&collectorId=fac66afa"></script>
+
+  <!-- Change Request -->
+  <button id="change-request">🔄 Change Request</button>
   <script type="text/javascript" src="https://tasya-lab.atlassian.net/s/d41d8cd98f00b204e9800998ecf8427e-T/vf1kch/b/9/c95134bc67d3a521bb3f4331beb9b804/_/download/batch/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector.js?locale=en-US&collectorId=897e212d"></script>
+
 </body>
 </html>
